# binancex

./: Cargo.toml  README.md
benches/: json_deserialization.rs
benches/json_dataset/: spot_general_exchange_info.json  spot_market_depth_btcusdt_100.json  spot_market_depth_btcusdt_5000.json
binance-schemes/: Cargo.toml  README.md
binance-schemes/src/: error.rs  lib.rs  market.rs  websocket.rs
binance-schemes/src/common/: general.rs  market.rs  mod.rs
binance-schemes/src/futures_dapi/: general.rs  market.rs  websocket.rs
binance-schemes/src/futures_fapi/: general.rs  market.rs  websocket.rs
binance-schemes/src/spot/: general.rs  market.rs  mod.rs  trade.rs  websocket.rs
binance-types/: Cargo.toml
binance-types/src/: lib.rs
binance-types/src/futures_common/: general.rs  limits.rs  mod.rs
binance-types/src/futures_dapi/: general.rs  limits.rs
binance-types/src/futures_fapi/: general.rs
binance-types/src/spot/: general.rs  limits.rs  mod.rs  permissions.rs
src/: error.rs  lib.rs  utils.rs
src/api/: mod.rs
src/api/client/: error.rs  hmac.rs  json.rs  mod.rs  query_string.rs  response.rs  url.rs
src/api/delivery_futures/: market.rs  mod.rs
src/api/perpetual_futures/: market.rs  mod.rs
src/api/spot/: market.rs  mod.rs  trade.rs
src/client/: general.rs  market.rs  mod.rs  websocket.rs
src/models/: general.rs  market.rs
src/scheme/: general.rs  market.rs  mod.rs  websocket.rs
tests/: delivery_futures_market_tests.rs  perpetual_futures_market_tests.rs  spot_market_tests.rs
tests/api_dataset/delivery_futures/market/: depth_2021-08-15.json  exchangeInfo_2021-08-15.json
tests/api_dataset/perpetual_futures/market/: depth_2021-08-15.json  exchangeInfo_2022-09-28.json
tests/api_dataset/spot/market/: aggTrades_2022-10-06.json  avgPrice_2022-10-06.json  depth_2022-03-25.json  historicalTrades_2022-11-11.json  klines_2022-10-06.json  ticker_24hr_full_2022-10-06.json  ticker_24hr_full_symbols_2022-10-06.json  ticker_24hr_mini_2022-10-06.json  ticker_24hr_mini_symbols_2022-10-06.json  ticker_bookTicker_2022-10-06.json  ticker_bookTicker_symbols_2022-10-06.json  ticker_price_2022-10-06.json  ticker_price_symbols_2022-10-06.json  trades_2022-10-06.json
