[package]
name = "binancex"
version = "0.1.0"
authors = ["bazarov <mikhail.bazaroff@gmail.com>"]
edition = "2018"


[dependencies]
reqwest = { version = "0.10", features = ["json", "rustls-tls", "trust-dns"] }
rust_decimal = "1.6"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
