[package]
name = "binancex"
version = "0.1.0"
authors = ["bazarov <mikhail.bazaroff@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "binance-schemes"
]

[dependencies]
binance-schemes = { path = "binance-schemes" }

reqwest = { version = "0.11", features = ["gzip", "json", "socks", "rustls-tls", "trust-dns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"


[dev-dependencies]
tokio = { version = "1.0.3", default-features = false, features = ["macros", "rt"] }
